--- a/client/index.html
+++ b/client/index.html
@@ -12,14 +12,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet" />
     <!-- Analytics script - only loaded if VITE_ANALYTICS_ENDPOINT is configured -->
     <script>
-      if ('%VITE_ANALYTICS_ENDPOINT%' && '%VITE_ANALYTICS_ENDPOINT%' !== '' && !('%VITE_ANALYTICS_ENDPOINT%'.includes('%'))) {
-        const script = document.createElement('script');
-        script.defer = true;
-        script.src = '%VITE_ANALYTICS_ENDPOINT%/umami';
-        script.setAttribute('data-website-id', '%VITE_ANALYTICS_WEBSITE_ID%');
-        script.onerror = () => console.log('Analytics not configured');
-        document.head.appendChild(script);
-      }
+      (function() {
+        const endpoint = '%VITE_ANALYTICS_ENDPOINT%';
+        const websiteId = '%VITE_ANALYTICS_WEBSITE_ID%';
+        if (endpoint && endpoint !== '%VITE_ANALYTICS_ENDPOINT%' && endpoint !== '' && !endpoint.includes('%')) {
+          const script = document.createElement('script');
+          script.defer = true;
+          script.src = endpoint + '/umami';
+          script.setAttribute('data-website-id', websiteId);
+          script.onerror = () => console.log('Analytics not configured');
+          document.head.appendChild(script);
+        }
+      })();
     </script>
   </head>
 
